[tool.poetry]
name = "final_project_qianrun_guo"
version = "0.1.0"
description = "Package that interacts with a financial API and extracts financial statements of user's choice of company. Moreover, this package contians functions to calculate essential financial ratios for business valuation."
authors = ["Qianrun Guo <qg2196@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
